--- a/package.json
+++ b/package.json
@@ -13,23 +13,40 @@
     "lintfix": "prettier --write --list-different . && npm run lint:js -- --fix"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1667386184.dfbbb54",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/composition-api": "^0.33.1",
+    "@nuxtjs/svg": "^0.4.0",
+    "aos": "^2.3.4",
+    "chart.js": "^2.9.4",
     "core-js": "^3.25.3",
+    "hchs-vue-charts": "^1.2.8",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "nuxt": "^2.15.8",
+    "nuxt-svg-loader": "^1.2.0",
     "vue": "^2.7.10",
+    "vue-chartjs": "^3.5.1",
+    "vue-pdf-embed": "^1.1.5",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
-    "vuetify": "^2.6.10"
+    "vuetify": "^2.6.10",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.19.1",
     "@nuxtjs/eslint-config": "^11.0.0",
     "@nuxtjs/eslint-module": "^3.1.0",
+    "@nuxtjs/google-fonts": "^2.0.0",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-vue": "^9.5.1",
-    "prettier": "^2.7.1"
+    "nodemon": "^2.0.20",
+    "prettier": "^2.7.1",
+    "sass": "^1.56.2",
+    "sass-loader": "^10.3.1"
   }
 }
